infrastructure/k8s/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: codecollab
spec:
  stripPrefix:
    prefixes:
      - /api
